--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,10 +90,10 @@ jobs:
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
-      - name: 🔏 Self-sign the installer with fallback timestamp
+      - name: 🔏 Sign installer
         shell: pwsh
         run: |
-          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
+          Write-Host "🔏 Signing installer..."
           $workspace = $env:GITHUB_WORKSPACE
           $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
           $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
@@ -113,12 +113,6 @@ jobs:
               -KeyAlgorithm RSA `
               -HashAlgorithm SHA256
 
-          # Import certificate into Trusted Root temporarily
-          $store = New-Object System.Security.Cryptography.X509Certificates.X509Store "Root","CurrentUser"
-          $store.Open("ReadWrite")
-          $store.Add($cert)
-          $store.Close()
-
           # Export to PFX
           Export-PfxCertificate -Cert $cert -FilePath $certPath -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) -Force
           Write-Host "✅ Exported temporary PFX to $certPath"
@@ -133,44 +127,41 @@ jobs:
           if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
           $installerPath = $installer.FullName
-          $timestampServers = @(
-              "http://timestamp.digicert.com",
-              "http://timestamp.globalsign.com/scripts/timstamp.dll"
-          )
 
-          $signed = $false
-          foreach ($server in $timestampServers) {
-              Write-Host "⏱ Attempting to sign using timestamp server: $server"
-              $args = @(
-                  "sign",
-                  "/f", $certPath,
-                  "/p", $password,
-                  "/fd", "SHA256",
-                  "/tr", $server,
-                  "/td", "SHA256",
-                  "/d", "MessengerActive Installer",
-                  "/du", "https://github.com/rupeshprabhu/MessengerActive",
-                  $installerPath
+          # Check if cert is self-signed
+          $isSelfSigned = $true
+          if ($isSelfSigned) {
+              Write-Warning "⚠️ Using self-signed certificate, timestamp servers will be skipped"
+              & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+          } else {
+              $timestampServers = @(
+                  "http://timestamp.digicert.com",
+                  "http://timestamp.globalsign.com/scripts/timstamp.dll"
               )
-
-              $proc = Start-Process -FilePath $signtool.FullName -ArgumentList $args -PassThru
-              if ($proc.WaitForExit(120000)) {  # 2 min timeout
-                  if ($LASTEXITCODE -eq 0) {
+              $signed = $false
+              foreach ($server in $timestampServers) {
+                  Write-Host "⏱ Attempting to sign using timestamp server: $server"
+                  $args = @(
+                      "sign",
+                      "/f", $certPath,
+                      "/p", $password,
+                      "/fd", "SHA256",
+                      "/tr", $server,
+                      "/td", "SHA256",
+                      "/d", "MessengerActive Installer",
+                      "/du", "https://github.com/rupeshprabhu/MessengerActive",
+                      $installerPath
+                  )
+                  $proc = Start-Process -FilePath $signtool.FullName -ArgumentList $args -PassThru
+                  if ($proc.WaitForExit(300000) -and $LASTEXITCODE -eq 0) {
                       $signed = $true
-                      Write-Host "✅ Successfully signed with timestamp server: $server"
                       break
-                  } else {
-                      Write-Host "⚠️ Signing failed with $server, trying next server..."
                   }
-              } else {
-                  $proc.Kill()
-                  Write-Host "⚠️ Signing timed out with $server, trying next server..."
               }
-          }
-
-          if (-not $signed) {
-              Write-Warning "❌ All timestamp servers failed, signing installer using fallback Authenticode timestamp (/t)"
-              & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /t http://timestamp.verisign.com/scripts/timstamp.dll /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+              if (-not $signed) {
+                  Write-Warning "❌ Timestamp servers failed, signing without timestamp"
+                  & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+              }
           }
 
           # Verify signature
