--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,7 @@ jobs:
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
-      - name: 🔏 Self-sign the installer (CI & Production)
+      - name: 🔏 Self-sign the installer (development)
         shell: pwsh
         run: |
           Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
@@ -113,20 +113,30 @@ jobs:
               -KeyAlgorithm RSA `
               -HashAlgorithm SHA256
 
-          # Export to PFX correctly
-          $securePassword = ConvertTo-SecureString -String $password -Force -AsPlainText
-          Export-PfxCertificate -Cert $cert -FilePath $certPath -Password $securePassword -Force
+          # Import into Trusted Root
+          $rootStore = New-Object System.Security.Cryptography.X509Certificates.X509Store "Root","CurrentUser"
+          $rootStore.Open("ReadWrite")
+          $rootStore.Add($cert)
+          $rootStore.Close()
+
+          # Import into Trusted Publisher
+          $pubStore = New-Object System.Security.Cryptography.X509Certificates.X509Store "TrustedPublisher","CurrentUser"
+          $pubStore.Open("ReadWrite")
+          $pubStore.Add($cert)
+          $pubStore.Close()
+
+          # Export to PFX (needed for signtool)
+          Export-PfxCertificate -Cert $cert -FilePath $certPath -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) -Force
           Write-Host "✅ Exported temporary PFX to $certPath"
+
+          # Locate signtool.exe
+          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe | Select-Object -First 1
+          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
           $installerPath = $installer.FullName
 
-          # Locate signtool.exe
-          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -ErrorAction SilentlyContinue |
-              Where-Object { $_.Name -eq "signtool.exe" -and $_.FullName -match "x64" } | Select-Object -First 1
-          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
-
-          # Sign using PFX directly (no import needed)
-          Write-Host "🔏 Signing installer with temporary PFX..."
+          # Sign using PFX
+          Write-Host "🔏 Signing installer with temporary self-signed certificate..."
           & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /d "MessengerActive Installer" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
 
           # Verify signature
