--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,7 +90,8 @@ jobs:
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
           Write-Host "✅ Renamed installer to: $newInstallerName"
 
-      - name: 🔏 Self-sign the installer (development)
+      - name: 🔏 Self-sign the installer (optional for internal testing)
+        if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
           Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
@@ -102,23 +103,24 @@ jobs:
           $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
           $password = "password123"
 
-          # ✅ Create a temporary self-signed certificate (no Trusted Root or Publisher import)
+          # ✅ Create a temporary self-signed certificate (LocalMachine scope so signtool can read it)
           $cert = New-SelfSignedCertificate `
               -Subject "CN=MessengerActive Developer Certificate" `
-              -CertStoreLocation "Cert:\CurrentUser\My" `
+              -CertStoreLocation "Cert:\LocalMachine\My" `
               -KeyExportPolicy Exportable `
               -KeyAlgorithm RSA `
               -KeyLength 2048 `
               -HashAlgorithm SHA256 `
-              -NotAfter (Get-Date).AddDays(7)
+              -NotAfter (Get-Date).AddDays(30)
 
-          # ✅ Export directly to PFX
-          Export-PfxCertificate -Cert $cert `
+          # ✅ Export to PFX file for signtool
+          Export-PfxCertificate `
+              -Cert $cert `
               -FilePath $certPath `
               -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
               -Force
 
-          Write-Host "✅ Exported temporary PFX certificate to: $certPath"
+          Write-Host "✅ Temporary PFX created at: $certPath"
 
           # ✅ Locate signtool.exe
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
@@ -126,9 +128,9 @@ jobs:
 
           $installerPath = $installer.FullName
 
-          # ✅ Sign using PFX
-          Write-Host "🔏 Signing installer..."
-          & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /tr "http://timestamp.digicert.com" /td SHA256 /d "MessengerActive Internal Test Build" $installerPath
+          # ✅ Sign the installer
+          Write-Host "🔏 Signing installer with temporary developer certificate..."
+          & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
 
           # ✅ Verify signature
           & $signtool.FullName verify /pa /v $installerPath
@@ -136,7 +138,8 @@ jobs:
             Write-Error "❌ Signature verification failed!"
             exit 1
           }
-          Write-Host "✅ Self-signing complete and verified!"
+
+          Write-Host "✅ Self-signed successfully for internal testing."
 
       - name: 📚 Archive source code
         run: |
