--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -144,10 +144,10 @@ jobs:
 
           Write-Host "✅ Self-signed successfully for internal testing."
 
-      #- name: 📚 Archive source code
-      #  run: |
-      #    git archive -o source_code.zip HEAD
-      #    git archive --format=tar.gz -o source_code.tar.gz HEAD
+      - name: 📚 Archive source code
+        run: |
+          git archive -o source_code.zip HEAD
+          git archive --format=tar.gz -o source_code.tar.gz HEAD
 
       - name: ⬆️ Upload build artifacts
         uses: actions/upload-artifact@v4
