--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,7 +71,6 @@ jobs:
         run: |
           pyinstaller --noconfirm --onedir --windowed --icon ma_icon.ico `
             --add-data "version.txt;." MessengerActive.py
-
           if (-not (Test-Path "$env:BUILD_DIR/MessengerActive/MessengerActive.exe")) {
             Write-Error "Executable not found after PyInstaller!"
             exit 1
@@ -83,16 +82,11 @@ jobs:
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" "MessengerActive.iss"
           $workspace = $env:GITHUB_WORKSPACE
           $installerPath = Join-Path $workspace "${{ env.INSTALLER_DIR }}\MessengerActive_Setup.exe"
-
           if (-not (Test-Path $installerPath)) {
             $found = Get-ChildItem -Path (Join-Path $workspace ${{ env.INSTALLER_DIR }}) -Filter "MessengerActive_Setup*.exe" | Select-Object -First 1
             if ($found) { $installerPath = $found.FullName }
           }
-
-          if (-not (Test-Path $installerPath)) { 
-            Write-Error "Installer not found after Inno Setup!"; exit 1 
-          }
-
+          if (-not (Test-Path $installerPath)) { Write-Error "Installer not found after Inno Setup!"; exit 1 }
           $version = "${{ steps.version.outputs.version }}"
           $newInstallerName = "${{ env.INSTALLER_BASE_NAME }}_$version.exe"
           Rename-Item -Path $installerPath -NewName $newInstallerName -Force
@@ -102,7 +96,7 @@ jobs:
         if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
-          Write-Host "🔏 Creating temporary self-signed certificate..."
+          Write-Host "🔏 Creating temporary code signing certificate (.pfx) and signing installer..."
           $workspace = $env:GITHUB_WORKSPACE
           $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
           $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
@@ -111,9 +105,8 @@ jobs:
           $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
           $password = "password123"
 
-          # Create self-signed certificate for internal builds
           $cert = New-SelfSignedCertificate `
-              -Subject "CN=MessengerActive Internal Developer Certificate" `
+              -Subject "CN=MessengerActive Developer Certificate" `
               -CertStoreLocation "Cert:\LocalMachine\My" `
               -KeyExportPolicy Exportable `
               -KeyAlgorithm RSA `
@@ -121,26 +114,28 @@ jobs:
               -HashAlgorithm SHA256 `
               -NotAfter (Get-Date).AddDays(30)
 
-          Export-PfxCertificate -Cert $cert `
+          Export-PfxCertificate `
+              -Cert $cert `
               -FilePath $certPath `
               -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
               -Force
 
           Write-Host "✅ Temporary PFX created at: $certPath"
 
-          # Locate signtool
           $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
           if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
 
           $installerPath = $installer.FullName
-          Write-Host "🔏 Signing installer..."
-          & $signtool.FullName sign /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
-          
+
+          Write-Host "🔏 Signing installer with temporary developer certificate..."
+          & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+
           & $signtool.FullName verify /pa /v $installerPath
           if ($LASTEXITCODE -ne 0) {
             Write-Error "❌ Signature verification failed!"
             exit 1
           }
+
           Write-Host "✅ Self-signed successfully for internal testing."
 
       - name: ⬆️ Upload build artifacts
@@ -149,6 +144,8 @@ jobs:
           name: messengeractive-artifacts
           path: |
             Output/MessengerActive_Setup_*.exe
+            source_code.zip
+            source_code.tar.gz
 
   prerelease:
     name: 🚀 Create Pre-Release
@@ -171,7 +168,12 @@ jobs:
         run: |
           Write-Host "Downloaded files:"
           Get-ChildItem -Recurse release | ForEach-Object { Write-Host $_.FullName }
-          if (-not (Get-ChildItem "release/Output" -Filter "MessengerActive_Setup_*.exe")) { Write-Error "Installer not found"; exit 1 }
+          if (-not (Get-ChildItem "release" -Filter "MessengerActive_Setup_*.exe")) {
+            Write-Error "Installer not found"
+            exit 1
+          }
+          if (-not (Test-Path "release/source_code.zip")) { Write-Error "Source zip not found"; exit 1 }
+          if (-not (Test-Path "release/source_code.tar.gz")) { Write-Error "Source tar.gz not found"; exit 1 }
 
       - name: 🏷️ Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
@@ -181,6 +183,8 @@ jobs:
           prerelease: true
           body: "🚀 MessengerActive Internal Test Build\n\nIncludes installer for Windows.\n\nSource code archives are automatically attached by GitHub."
           files: |
-            release/Output/MessengerActive_Setup_*.exe
+            release/MessengerActive_Setup_*.exe
+            release/source_code.zip
+            release/source_code.tar.gz
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
