--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,3 @@
-# MessengerActive CI/CD workflow (fixed verification)
 name: MessengerActive CI/CD
 
 on:
@@ -98,13 +97,47 @@ jobs:
         if: env.SIGN_INTERNAL == 'true'
         shell: pwsh
         run: |
-          # Signing steps (same as original)
+          Write-Host "🔏 Creating temporary code signing certificate..."
+          $workspace = $env:GITHUB_WORKSPACE
+          $installerDir = Join-Path $workspace "${{ env.INSTALLER_DIR }}"
+          $installer = Get-ChildItem -Path $installerDir -Filter "${{ env.INSTALLER_BASE_NAME }}_*.exe" | Select-Object -First 1
+          if (-not $installer) { Write-Error "Installer not found for signing"; exit 1 }
+
+          $certPath = Join-Path $env:RUNNER_TEMP "temp_signing_cert.pfx"
+          $password = "password123"
+          $cert = New-SelfSignedCertificate `
+              -Subject "CN=MessengerActive Developer Certificate" `
+              -CertStoreLocation "Cert:\LocalMachine\My" `
+              -KeyExportPolicy Exportable `
+              -KeyAlgorithm RSA `
+              -KeyLength 2048 `
+              -HashAlgorithm SHA256 `
+              -NotAfter (Get-Date).AddDays(30)
+
+          Export-PfxCertificate `
+              -Cert $cert `
+              -FilePath $certPath `
+              -Password (ConvertTo-SecureString -String $password -Force -AsPlainText) `
+              -Force
+
+          Write-Host "✅ Temporary PFX created at: $certPath"
+
+          $signtool = Get-ChildItem "C:\Program Files (x86)\Windows Kits" -Recurse -Filter signtool.exe -ErrorAction SilentlyContinue | Select-Object -First 1
+          if (-not $signtool) { Write-Error "signtool.exe not found"; exit 1 }
+
+          $installerPath = $installer.FullName
+          Write-Host "🔏 Signing installer..."
+          & $signtool.FullName sign /debug /f $certPath /p $password /fd SHA256 /d "MessengerActive Internal Build" /du "https://github.com/rupeshprabhu/MessengerActive" $installerPath
+          & $signtool.FullName verify /pa /v $installerPath
+          if ($LASTEXITCODE -ne 0) { Write-Error "❌ Signature verification failed!"; exit 1 }
+          Write-Host "✅ Self-signed successfully."
 
       - name: ⬆️ Upload build artifacts
         uses: actions/upload-artifact@v4
         with:
           name: messengeractive-artifacts
-          path: Output/MessengerActive_Setup_*.exe
+          path: |
+            Output
 
   prerelease:
     name: 🚀 Create Pre-Release
@@ -122,15 +155,15 @@ jobs:
           name: messengeractive-artifacts
           path: release
 
-      - name: 🔍 Verify downloaded installer
+      - name: 🔍 Verify downloaded files
         shell: pwsh
         run: |
-          Write-Host "Files in release/Output:"
           $outputDir = Join-Path $PWD "release/Output"
           if (-not (Test-Path $outputDir)) { Write-Error "release/Output not found"; exit 1 }
           Get-ChildItem -Recurse $outputDir | ForEach-Object { Write-Host $_.FullName }
           $installer = Get-ChildItem $outputDir -Filter "MessengerActive_Setup_*.exe" | Select-Object -First 1
           if (-not $installer) { Write-Error "Installer not found in release/Output"; exit 1 }
+          Write-Host "✅ Installer verified successfully"
 
       - name: 🏷️ Create Pre-release on GitHub
         uses: softprops/action-gh-release@v2
